--- a/res/layout/action_bar_main_layout.xml
+++ b/res/layout/action_bar_main_layout.xml
@@ -14,22 +14,24 @@
         android:layout_marginLeft="10dp"
         android:src="@android:drawable/ic_menu_directions" />
 
-    <!-- <ImageView
+    <!--
+         <ImageView
         android:id="@+id/action_bar_cam_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:src="@android:drawable/ic_menu_camera" /> -->
+        android:src="@android:drawable/ic_menu_camera" />
+    -->
 
     <ImageView
         android:id="@+id/action_bar_search_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:layout_alignParentRight="true"
         android:src="@android:drawable/ic_menu_search" />
 
     <TextView
