--- a/res/layout/custom_list_drawer_layout.xml
+++ b/res/layout/custom_list_drawer_layout.xml
@@ -52,7 +52,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:textColor="@android:color/white"
-                android:textSize="17dp"/>
+                android:textSize="17dp" />
 
             <TextView
                 android:id="@+id/drawer_addfriend_tv"
@@ -61,9 +61,9 @@
                 android:layout_alignParentRight="true"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
-                android:textSize = "12dp"
                 android:text="@string/drawer_title_add_friend"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textSize="12dp" />
         </RelativeLayout>
     </LinearLayout>
 
