--- a/res/layout/email_register_layout.xml
+++ b/res/layout/email_register_layout.xml
@@ -37,12 +37,12 @@
     <TextView
         android:id="@+id/register_guide_tv"
         android:layout_width="fill_parent"
-        android:text="@string/password_email_register_guide"
         android:layout_height="wrap_content"
         android:layout_below="@id/password_email_rergistere_dt"
         android:layout_marginLeft="@dimen/spinner_country_martin_left"
         android:layout_marginRight="@dimen/spinner_country_martin_left"
-        android:layout_marginTop="@dimen/register_default_martin_top" />
+        android:layout_marginTop="@dimen/register_default_martin_top"
+        android:text="@string/password_email_register_guide" />
 
     <Button
         android:id="@+id/register_email_later_btn"
