--- a/res/layout/hot_sale_item_layout.xml
+++ b/res/layout/hot_sale_item_layout.xml
@@ -17,9 +17,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/hot_sale_item_avatar_iv"
+        android:layout_marginBottom="7dp"
         android:layout_marginLeft="7dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginBottom="7dp" >
+        android:layout_marginRight="7dp" >
 
         <Button
             android:id="@+id/hot_sale_item_confirm_btn"
